; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_config-file.c_config_set_default_double.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_config-file.c_config_set_default_double.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.dstr = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"%g\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @config_set_default_double(%struct.TYPE_4__* %0, i8* %1, i8* %2, double %3) #0 {
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca double, align 8
  %9 = alloca %struct.dstr, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store double %3, double* %8, align 8
  %10 = call i32 @dstr_init(%struct.dstr* %9)
  %11 = load double, double* %8, align 8
  %12 = call i32 @dstr_printf(%struct.dstr* %9, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), double %11)
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i8*, i8** %6, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = getelementptr inbounds %struct.dstr, %struct.dstr* %9, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @config_set_item(%struct.TYPE_4__* %13, i32* %15, i8* %16, i8* %17, i32 %19)
  ret void
}

declare dso_local i32 @dstr_init(%struct.dstr*) #1

declare dso_local i32 @dstr_printf(%struct.dstr*, i8*, double) #1

declare dso_local i32 @config_set_item(%struct.TYPE_4__*, i32*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
